<resources>

    <!--  Main Activity   -->
    <string name="app_name">WalkMeApp</string>

    <!--  Load Trainings  -->
    <string name="history_title">History</string>
    <string name="history_no_trainings">You have no trainings!</string>
    <string name="main_training_title">Training</string>

    <!-- Useful for Start/Stop Training Animation-->
    <string name="training_green">#28ada5</string>
    <string name="training_grey">#5f5f5f</string>

    <!--  Training  -->
    <string name="steps_min_label"> Steps/min</string>
    <string name="km_hour_label"> Km/h</string>
    <string name="steps_min_value"> 0</string>
    <string name="km_hour_value"> 0</string>

    <!--  Settings  -->
    <string name="settings_title">Settings</string>
    <string name="settings_step_length">Step Length</string>
    <string name="settings_last_x_meters">Last X Meters</string>ù
    <string name="settings_average_step">Average Step</string>

    <!--  About  -->
    <string name="about_title">About</string>
    <string name="about_text_body">is a fitness app focused on Step monitoring. \n \n It is being developed with   </string>
    <string name="about_text_body_cont">   by these beauties: </string>
<<<<<<< HEAD
    <string name="average_steps_label">place</string>
    <string name="average_speed_value">placeholder</string>
    <string name="average_speed_label">placeholder</string>
    <string name="total_distance_value">placeholder</string>
    <string name="total_distance_label">placeholder</string>
    <string name="training_date_label">placeholder</string>
    <string name="training_name_label">placeholder</string>
    <string name="axisX_time">Tempo</string>
    <string name="axisX_distance">Distanza</string>
    <string name="axisY_speed">Velocita</string>
    <string name="axisY_pace">Andamento</string>
    <string name="axisY_altitude">Altitudine</string>
=======
>>>>>>> a0374e9fe16b1271f561ee9e6a2451c5201107b7

    <!-- ViewTraining -->
    <string name="total_steps_label">Tot Steps</string>
    <string name="average_speed_label">Avg Speed</string>
    <string name="total_distance_label">Tot Distance</string>
    <string name="training_date_label">label</string>
    <string name="training_name_label">label</string>
    <string name="average_pace_label">Avg Pace</string>
    <string name="x_steps_label"> label</string>
    <string name="x_speed_label"> Avg X Speed </string>
    <string name="x_pace_label"> Avg X Pace </string>

    <!-- Arrays for lists -->

    <!-- Main Page-->
    <string-array name="main_page_list_items">
        <item>Start</item>
        <item>History</item>
        <item>Settings</item>
        <item>About</item>
    </string-array>

    <!-- History Trainings Page-->
    <string-array name="history_list_items">
        <item>History</item>
        <item><!--Dynamic Month and Dates--></item>
    </string-array>

    <string-array name="history_list_months">
        <item>Gennaio</item>
        <item>Febbraio</item>
        <item>Marzo</item>
        <item>Aprile</item>
        <item>Maggio</item>
        <item>Giugno</item>
        <item>Luglio</item>
        <item>Agosto</item>
        <item>Settembre</item>
        <item>Ottobre</item>
        <item>Novembre</item>
        <item>Dicembre</item>
    </string-array>


    <!-- About Page-->
    <string-array name="about_grid_items">
        <item>Andrea</item>
        <item>Alessio</item>
        <item>Cristin</item>
        <item>Marco</item>
    </string-array>

    <!-- Trainings List -->
    <string-array name="trainings_list_list_items">
        <!--To Do-->
    </string-array>

    <!-- Current Training Page-->
    <string-array name="current_train_list_items">
        <item>Training <!--Day/Month--></item>
        <item>Steps/Min:</item>
        <item>Km/H:</item>
        <item>Optimal Step:</item>
    </string-array>


</resources>
