<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_end_training"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

   <RelativeLayout
       android:id="@+id/training_graph"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content">
       <ImageView
           android:layout_width="wrap_content"
           android:layout_height="180dp"
           android:src="@drawable/icon"
           />
   </RelativeLayout>
    <RelativeLayout
        android:id="@+id/layout_name_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/training_graph"
        android:paddingTop="20dp"
        android:layout_weight="1">


        <TextView
            android:id="@+id/training_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/training_name_label"
            android:textColor="@color/grey"
            android:textSize="@dimen/generic_list_main_text" />

        <TextView

            android:id="@+id/training_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/training_name"

            android:text="@string/training_date_label"
            android:textColor="@color/grey"
            android:paddingBottom="20dp"
            android:textSize="@dimen/generic_list_training_main_text" />




    </RelativeLayout>


        <RelativeLayout
            android:id="@+id/layout_totalDistance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_name_date">


            <TextView
                android:id="@+id/total_distance_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_distance_label"
                android:textColor="@color/grey"
                android:textSize="@dimen/generic_list_training_main_text" />

            <TextView

                android:id="@+id/item_text2Left1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/total_distance_label"
                android:text="@string/total_distance_value"
                android:textColor="@color/grey"
                android:textSize="@dimen/generic_list_main_text" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_averageSpeed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_totalDistance">

            <TextView

                android:id="@+id/item_text1Right1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/average_speed_label"
                android:textColor="@color/grey"
                android:textSize="@dimen/generic_list_training_main_text" />

            <TextView
                android:id="@+id/item_text2Right1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/item_text1Right1"
                android:text="@string/average_speed_value"
                android:textColor="@color/grey"
                android:textSize="@dimen/generic_list_main_text" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/minute_steps2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_averageSpeed">


                <TextView
                    android:id="@+id/settings_average_step"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/average_steps_label"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/generic_list_training_main_text" />

                <TextView

                    android:id="@+id/item_text2Left2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/settings_average_step"
                    android:text="@string/steps_min_value"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/generic_list_main_text" />

            </RelativeLayout>
<RelativeLayout
    android:id="@+id/layout_face"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/training_graph"
    android:layout_centerVertical="true">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/sad_face"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:paddingRight="10dp"/>
</RelativeLayout>
        </RelativeLayout>










