<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <include
        android:id="@+id/action_bar_load_trainings"
        layout="@layout/actionbar_main"/>

    <LinearLayout
        android:id="@+id/menu_item_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/action_bar_load_trainings"
        android:orientation="vertical">

        <com.project.so2.walkmeapp.core.PausableChronometer
            android:id="@+id/digital_clock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:textColor="@color/grey"
            android:layout_weight="5"
            android:textSize="80dp"/>

        <LinearLayout
            android:id="@+id/training_infos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/digital_clock"
            android:orientation="horizontal"
            android:layout_weight="1">

            <RelativeLayout
                android:id="@+id/minute_steps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">


                <TextView
                    android:id="@+id/item_text1Left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/steps_min_label"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/generic_list_training_main_text"/>

                <TextView

                    android:id="@+id/item_text2Left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/item_text1Left"
                    android:layout_centerHorizontal="true"
                    android:text="@string/steps_min_value"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/generic_list_training_subtext"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/km_hour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView

                    android:id="@+id/item_text1Right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/km_hour_label"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/generic_list_training_main_text"/>

                <TextView
                    android:id="@+id/item_text2Right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/item_text1Right"
                    android:layout_centerHorizontal="true"
                    android:text="@string/km_hour_value"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/generic_list_training_subtext"/>

            </RelativeLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="170"
            android:gravity="center_vertical">

            <LinearLayout
            android:id="@+id/layout_main_image_training"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:orientation="horizontal"
                android:layout_centerInParent="true">

            <RelativeLayout
                android:id="@+id/training_run_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/training_grey">

                <ImageView
                    android:id="@+id/image_training_run"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:paddingBottom="10dp"
                    android:paddingLeft="30dp"
                    android:paddingTop="10dp"
                    android:scaleType="fitStart"
                    android:src="@drawable/runner_transparent"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/training_stop_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/training_green">

                <ImageView
                    android:id="@+id/image_training_stop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_weight="1"
                    android:paddingBottom="10dp"
                    android:paddingRight="30dp"
                    android:paddingTop="10dp"
                    android:scaleType="fitEnd"
                    android:src="@drawable/stickman_trasparent"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"/>

            </RelativeLayout>

        </LinearLayout>


            <RelativeLayout
                android:id="@+id/icons_play_pause"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerInParent="true">

                <RelativeLayout
                    android:adjustViewBounds="true"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:background="@drawable/play_button"
                    android:layout_centerInParent="true">

                    <com.wnafee.vector.MorphButton
                        android:id="@+id/playPauseBtn"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        app:buttonTint="@color/white"
                        app:vc_backgroundTint="@color/transparent"
                        app:vc_endDrawable="@drawable/ic_play_to_pause"
                        app:vc_foregroundTint="@color/white"
                        app:vc_startDrawable="@drawable/ic_pause_to_play"
                        />

                </RelativeLayout>

            </RelativeLayout>


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/RelativeLayout01"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/icons_play_pause"
            android:layout_weight="180">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <lecho.lib.hellocharts.view.LineChartView
                    android:id="@+id/chart"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    >


                    <ImageView
                        android:id="@+id/arrow_up"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/grey"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:layout_marginTop="10dp"
                        android:scaleType="centerInside"/>

                    <ImageView
                        android:id="@+id/arrow_down"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_below="@id/arrow_up"
                        android:background="@drawable/grey_down"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:layout_marginBottom="10dp"
                        android:scaleType="centerInside"/>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>


    </LinearLayout>
</RelativeLayout>

